--- a/.github/workflows/pushdocs.yml
+++ b/.github/workflows/pushdocs.yml
@@ -20,11 +20,20 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Setup mdBook Preprocessors
+        uses: cargo-bins/cargo-binstall@v1.6.8
+
       - name: Setup mdBook
         run: |
           mkdir mdbook
           curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.14/mdbook-v0.4.14-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=./mdbook
           echo `pwd`/mdbook >> $GITHUB_PATH
+
+      - name: Install mdBook Preprocessors
+        run: |
+          cargo binstall --no-confirm mdbook-mermaid
+          mdbook-mermaid install docs-export/
+          cargo binstall --no-confirm mdbook-alerts
 
       - name: Build
         run: |
